<!--  contenedor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.jcyl.cee.cylford.app.cyldigital.ui.MenuActivity">

    <!--MENU TOP-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/menu" >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/title_menu_formacion"
            android:textColor="@color/textw" />
    </RelativeLayout>


    <!--MENU PRESENCIALES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/icono_presenciales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:src="@drawable/presenciales"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/presencial"
            android:layout_toRightOf="@id/icono_presenciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:text="@string/menu_presencial" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:layout_below="@+id/presencial"
            android:text="@string/menu_formacion_presencial"
            android:id="@+id/textView_presencial"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffadadad"/>

    <!--MENU ONLINES-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/icono_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/online"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/online"
            android:layout_toRightOf="@id/icono_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:text="@string/menu_online" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:layout_below="@+id/online"
            android:text="@string/menu_formacion_online"
            android:id="@+id/textView_online"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>/>
    </RelativeLayout>

</LinearLayout>

    <TextView
        android:id="@+id/build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="3dp"
        android:textColor="#ff666666"
        android:text="Build 34"/>
</LinearLayout>
