<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.ActividadesFormativasActivity">
    <!--
    Para evitar el foco en el edittext de búsqueda en el layou superior
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"-->

    <include layout="@layout/menu_top" />
    <!--Línea entre el título y el layout de los combos -->
    <!--dp: Pixeles independientes de la densidad -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffadadad"/>

    <!--SPINNERS TIPO PRESENCIAL-->
    <!--android:layout_height="wrap_content" para que solo ocupe tamaño combos-->
    <LinearLayout
        android:id="@+id/layoutSpinners"
        android:layout_width="match_parent"
        android:background="@color/spinners"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--android:layout_width="0dp" misma medida en ancho-->
        <Spinner
            android:id="@+id/localidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/btn_dropdown">
        </Spinner>

        <!--Línea entre los 2 combos-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffadadad"/>

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/btn_dropdown">
        </Spinner>
    </LinearLayout>

    <!--FECHAS TIPO ONLINE-->
    <!--android:layout_height="wrap_content" para que solo ocupe tamaño combos-->
    <LinearLayout
        android:id="@+id/layoutFechas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/spinners"
        android:weightSum="2">

        <!--fecha de Inicio-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textofechaIni"
                android:text="@string/startdatetext"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_gravity="top"
                android:paddingLeft="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="0.66" >
                <TextView
                    android:id="@+id/fechaInicio"
                    android:layout_width="70dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="bottom|right"
                    android:textColor="#000000"
                    android:gravity="center_vertical|center_horizontal" />
                <ImageButton
                    android:id="@+id/imagenCalendarFI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/selectstartdate"
                    android:src="@drawable/calendar"
                    android:padding="0dp" />
            </LinearLayout>
        </LinearLayout>

        <!--Línea entre los textos de fechas-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffadadad"/>

        <!--fecha de Fin-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textofechaFin"
                android:text="@string/enddatetext"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_gravity="top"
                android:paddingLeft="5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="0.66">
                <TextView
                    android:id="@+id/fechaFin"
                    android:layout_width="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="bottom|right"
                    android:textColor="#000000"
                    android:gravity="center_vertical|center_horizontal" />
                <ImageButton
                    android:id="@+id/imagenCalendarFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/selectenddate"
                    android:src="@drawable/calendar"
                    android:layout_gravity="left"
                    android:padding="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/search_field"
        android:drawableLeft="@drawable/herramienta"
        android:gravity="center"
        android:hint="@string/search"
        android:singleLine="true"
        android:textSize="16sp"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textColor="@color/subtitle"/>

    <!--botón de pruebas oculto "gone"-->
    <Button
        android:id="@+id/btnPrueba"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Busca"
        android:textSize="11sp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textColor="@android:color/white"
        android:background="@color/menu"
        android:gravity="center"
        android:id="@+id/count"
        android:text="21 cursos disponibles"/>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#00000000"
        ptr:ptrHeaderTextColor="#ff444444"
        />
</LinearLayout>
